Revision history for {{$dist->name}}

{{$NEXT}}
          - fix test that broke when I released version 0.09 of
            Dist::Zilla::Plugin::Test::NoTabs
          - remove prereq declaration for plugin that is only actually ever
            used for ether herself

0.070     2014-08-16 18:48:19Z
          - revert git contributor change from v0.069; opened
            (github) CPAN-API/metacpan-web#1270 instead.
          - order contributors by number of commits, descending
          - no longer adding an $AUTHORITY variable to modules, as nothing
            (save Class::MOP, Moose and Moo) has ever used it - this also
            avoids shifting our line numbers by 3

0.069     2014-08-07 02:44:38Z
          - bump prereq on [Git::Contributors] to allow tests to pass when
            running outside of a git repository
          - remove hacks for [ReadmeAnyFromPod], now that the stable release
            is out supporting phase=release
          - fix test failure when installer's ~/.pause cannot be parsed
          - fix test failure on older Dist::Zilla where TestRunners did not
            dump their configuration into metadata
          - now including authors in contributor lists, except for the
            releaser herself

0.068     2014-08-06 04:15:24Z
          - README.pod is now generated only in the repository, after
            release, so it never shows up in the shipped dist
          - include a default .mailmap in the minted dist; invite the user to
            update .mailmap if the contributor data is not quite right
          - avoid errors from in XS-based distributions where a token Makefile.PL
            is included and we try to generate our own over top
          - more directories added to no_index
          - now instead of installing release with [InstallRelease], switch to
            [Run::AfterRelease] with an author-specific PAUSE URL, to help out
            cpanm-reporter