@@ -17,6 +17,7 @@ use List::Util qw(first any);
 use Module::Runtime 'require_module';
 use Devel::CheckBin;
 use Path::Tiny;
+use CPAN::Meta::Requirements;
 use namespace::autoclean;
 
 sub mvp_multivalue_args { qw(installer copy_file_from_release) }
@@ -115,8 +116,6 @@ sub configure
     warn '[@Author::ETHER] bin/ detected - should this be moved to script/, so its contents can be installed into $PATH?', "\n"
         if -d 'bin' and any { $_ eq 'ModuleBuildTiny' } $self->installer;
 
-    my %plugin_versions;
-
     my @plugins = (
         # VersionProvider
         [ 'Git::NextVersion'    => { version_regexp => '^v([\d._]+)(-TRIAL)?$' } ],
@@ -172,8 +171,7 @@ sub configure
         [ 'ReadmeAnyFromPod'    => { ':version' => '0.142180', type => 'pod', location => 'root', phase => 'release' } ],
 
         # MetaData
-        $self->server eq 'github'
-            ? ( 'GithubMeta', do { $plugin_versions{'Dist::Zilla::Plugin::GithubMeta'} = 0; () }) : (),
+        $self->server eq 'github' ? 'GithubMeta' : (),
         [ 'AutoMetaResources'   => { 'bugtracker.rt' => 1,
               $self->server eq 'gitmo' ? ( 'repository.gitmo' => 1 )
             : $self->server eq 'p5sagit' ? ( 'repository.p5sagit' => 1 )
@@ -202,8 +200,7 @@ sub configure
             } ] : ()),
 
         # Install Tool (some are also Test Runners)
-        (map { [ $_ => { ':version' => 0 } ] }
-            $self->installer), # ensure an entry in develop prereqs
+        $self->installer,
         'InstallGuide',
 
         # Test Runners
@@ -225,7 +222,7 @@ sub configure
         'CheckPrereqsIndexed',
         'TestRelease',
         [ 'Git::Check'          => 'after tests' => { allow_dirty => [''] } ],
-        [ 'CheckIssues' ],
+        'CheckIssues',
         # (ConfirmRelease)
 
         # Releaser
@@ -236,10 +233,7 @@ sub configure
         [ 'Run::AfterRelease'   => 'remove old READMEs' => { run => 'rm -f README.md' } ],
         [ 'Git::Commit'         => { ':version' => '2.020', add_files_in => ['.'], allow_dirty => [ 'Changes', 'README.md', 'README.pod', $self->copy_files_from_release ], commit_msg => '%N-%v%t%n%n%c' } ],
         [ 'Git::Tag'            => { tag_format => 'v%v%t', tag_message => 'v%v%t' } ],
-        $self->server eq 'github' ? (
-            [ 'GitHub::Update'  => { metacpan => 1 } ],
-            do { $plugin_versions{'Dist::Zilla::Plugin::GitHub::Update'} = 0; () },
-        ) : (),
+        $self->server eq 'github' ? [ 'GitHub::Update' => { metacpan => 1 } ] : (),
         'Git::Push',
     );
 
@@ -264,8 +258,6 @@ sub configure
         # allow our uncommitted dist.ini edit which sets 'airplane = 1'
         push @{( first { ref eq 'ARRAY' && $_->[0] eq 'Git::Check' } @plugins )->[-1]{allow_dirty}}, 'dist.ini';
 
-        $plugin_versions{'Dist::Zilla::Plugin::BlockRelease'} = 0;
-
         # halt release after pre-release checks, but before ConfirmRelease
         push @plugins, 'BlockRelease';
     }
@@ -275,13 +267,13 @@ sub configure
         'ConfirmRelease',
     );
 
-    foreach my $plugin_spec (@plugins)
+    my $plugin_requirements = CPAN::Meta::Requirements->new;
+    foreach my $plugin_spec (@plugins = map { ref ? $_ : [ $_ ] } @plugins)
     {
-        next if not ref $plugin_spec or @$plugin_spec == 1;             # 'Foo' or [ 'Foo' ]
-        next if @$plugin_spec == 2 and not ref $plugin_spec->[1];       # [ 'Foo' => 'Bar' ]
-
         my $plugin = Dist::Zilla::Util->expand_config_package_name($plugin_spec->[0]);
         require_module($plugin);
+
+        push @$plugin_spec, {} if not ref $plugin_spec->[-1];
         my $payload = $plugin_spec->[-1];
 
         if (my @keys = grep { $plugin->isa($_) or $plugin->does($_) } keys %extra_args)
@@ -293,15 +285,15 @@ sub configure
             @{$payload}{keys %configs} = values %configs;
         }
 
-        # also grab :version
-        $plugin_versions{$plugin} = $payload->{':version'} if exists $payload->{':version'};
+        # record develop prereq
+        $plugin_requirements->add_minimum($plugin => $payload->{':version'} // 0);
     }
 
     # ensure that additional optional plugins are declared in prereqs
     unshift @plugins,
-        [ 'Prereqs' => bundle_options =>
-            { '-phase' => 'develop', '-relationship' => 'requires', %plugin_versions } ]
-                if keys %plugin_versions;
+        [ 'Prereqs' => bundle_plugins =>
+            { '-phase' => 'develop', '-relationship' => 'requires',
+              %{ $plugin_requirements->as_string_hash } } ];
 
     push @plugins, (
         # listed last, to be sure we run at the very end of each phase
